Fix animation flickering on page load

--- a/app/assets/less/base.less
+++ b/app/assets/less/base.less
@@ -68,14 +68,8 @@ We're using CSS keyframe animations for when
 the leave event is triggered for the element
 that has the .repeated-item class
 */
-.list-group-item.ng-leave {
-    -webkit-animation:0.5s my_animation;
-    -moz-animation:0.5s my_animation;
-    -o-animation:0.5s my_animation;
-    animation:0.5s my_animation;
-}
 
-.list-group-item.ng-hide-add {
+.list-group-item.ng-hide-remove {
     -webkit-animation:0.5s my_animation;
     -moz-animation:0.5s my_animation;
     -o-animation:0.5s my_animation;
